--- a/Katakana/MainWindow.xaml
+++ b/Katakana/MainWindow.xaml
@@ -5,9 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Katakana"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Grid x:Name="PixelGrid" Margin="0,10,385,10">
+        Title="MainWindow" Height="900" Width="1600">
+    <Grid RenderTransformOrigin="0.5,0.5">
+        <Grid.RenderTransform>
+            <TransformGroup>
+                <ScaleTransform/>
+                <SkewTransform/>
+                <RotateTransform Angle="0.247"/>
+                <TranslateTransform/>
+            </TransformGroup>
+        </Grid.RenderTransform>
+        <Grid x:Name="PixelGrid" Margin="0,10,726,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -29,7 +37,36 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
         </Grid>
-        <TextBox x:Name="textbox" HorizontalAlignment="Left" Margin="610,0,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Center" Width="180" Height="414"/>
-        <Button x:Name="scan" Content="Button" HorizontalAlignment="Left" Margin="455,304,0,0" VerticalAlignment="Top" Width="90" Height="30" Click="scan_Click"/>
+        <TextBox x:Name="textbox" HorizontalAlignment="Left" Margin="1285,12,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="312" Height="195"/>
+        <Button x:Name="scan" Content="Sprawdź!" HorizontalAlignment="Left" Margin="1025,665,0,0" VerticalAlignment="Top" Width="90" Height="30" Click="scan_Click"/>
+        <Label Content="Liczba iteracji" HorizontalAlignment="Left" Margin="916,740,0,0" VerticalAlignment="Top"/>
+        <Label Content="Współczynnik Ro" HorizontalAlignment="Left" Margin="1030,741,0,0" VerticalAlignment="Top"/>
+        <Label Content="Wartość błędu" HorizontalAlignment="Left" Margin="1163,742,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.535,0.201"/>
+        <TextBox x:Name="iterations" HorizontalAlignment="Left" Margin="878,774,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" TextChanged="iterations_TextChanged"/>
+        <TextBox x:Name="Ro" HorizontalAlignment="Left" Margin="1018,774,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="Error" HorizontalAlignment="Left" Margin="1157,773,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="Train" Content="Trenuj" HorizontalAlignment="Left" Margin="1028,818,0,0" VerticalAlignment="Top" Height="22" Width="74" Click="Train_Click"/>
+        <Grid x:Name="PixelGrid_Display" Margin="1300,237,7,264">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+        </Grid>
     </Grid>
 </Window>
