--- a/Katakana/MainWindow.xaml
+++ b/Katakana/MainWindow.xaml
@@ -42,8 +42,8 @@
         <Label Content="Liczba iteracji" HorizontalAlignment="Left" Margin="916,740,0,0" VerticalAlignment="Top"/>
         <Label Content="Współczynnik Ro" HorizontalAlignment="Left" Margin="1030,741,0,0" VerticalAlignment="Top"/>
         <Label Content="Wartość błędu" HorizontalAlignment="Left" Margin="1163,742,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.535,0.201"/>
-        <TextBox x:Name="iterations" HorizontalAlignment="Left" Margin="878,774,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" TextChanged="iterations_TextChanged"/>
-        <TextBox x:Name="Ro" HorizontalAlignment="Left" Margin="1018,774,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="iterations" HorizontalAlignment="Left" Margin="878,774,0,0" TextWrapping="Wrap" Text="10000" VerticalAlignment="Top" Width="120" TextChanged="iterations_TextChanged"/>
+        <TextBox x:Name="Ro" HorizontalAlignment="Left" Margin="1018,774,0,0" TextWrapping="Wrap" Text="0.2" VerticalAlignment="Top" Width="120" TextChanged="Ro_TextChanged"/>
         <TextBox x:Name="Error" HorizontalAlignment="Left" Margin="1157,773,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="Train" Content="Trenuj" HorizontalAlignment="Left" Margin="1028,818,0,0" VerticalAlignment="Top" Height="22" Width="74" Click="Train_Click"/>
         <Grid x:Name="PixelGrid_Display" Margin="1300,237,7,264">
