--- a/Katakana/MainWindow.xaml
+++ b/Katakana/MainWindow.xaml
@@ -5,17 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Katakana"
         mc:Ignorable="d"
-        Title="MainWindow" Height="900" Width="1600">
-    <Grid RenderTransformOrigin="0.5,0.5">
+        Title="MainWindow" Height="600" Width="1080">
+    <Grid RenderTransformOrigin="0.611,0.528">
         <Grid.RenderTransform>
             <TransformGroup>
                 <ScaleTransform/>
                 <SkewTransform/>
                 <RotateTransform Angle="0.247"/>
-                <TranslateTransform/>
+                <TranslateTransform X="-0.071" Y="0.517"/>
             </TransformGroup>
         </Grid.RenderTransform>
-        <Grid x:Name="PixelGrid" Margin="0,10,726,10">
+        <Grid x:Name="PixelGrid" Margin="0,10,558,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -37,16 +37,14 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
         </Grid>
-        <TextBox x:Name="textbox" HorizontalAlignment="Left" Margin="1271,77,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="312" Height="51" TextAlignment="Center" FontFamily="Agency FB" FontSize="36" IsUndoEnabled="False"/>
-        <Button x:Name="scan" Content="Sprawdź!" HorizontalAlignment="Left" Margin="1025,665,0,0" VerticalAlignment="Top" Width="90" Height="30" Click="scan_Click"/>
-        <Label Content="Liczba iteracji" HorizontalAlignment="Left" Margin="916,740,0,0" VerticalAlignment="Top"/>
-        <Label Content="Współczynnik Ro" HorizontalAlignment="Left" Margin="1030,741,0,0" VerticalAlignment="Top"/>
-        <Label Content="Wartość błędu" HorizontalAlignment="Left" Margin="1163,742,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.535,0.201"/>
-        <TextBox x:Name="iterations" HorizontalAlignment="Left" Margin="878,774,0,0" TextWrapping="Wrap" Text="10000" VerticalAlignment="Top" Width="120" TextChanged="iterations_TextChanged"/>
-        <TextBox x:Name="Ro" HorizontalAlignment="Left" Margin="1018,774,0,0" TextWrapping="Wrap" Text="0.2" VerticalAlignment="Top" Width="120" TextChanged="Ro_TextChanged"/>
-        <TextBox x:Name="Error" HorizontalAlignment="Left" Margin="1157,773,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="Train" Content="Trenuj" HorizontalAlignment="Left" Margin="1028,818,0,0" VerticalAlignment="Top" Height="22" Width="74" Click="Train_Click"/>
-        <Grid x:Name="PixelGrid_Display" Margin="1221,190,7,186">
+        <TextBox x:Name="textbox" HorizontalAlignment="Left" Margin="809,34,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="243" Height="51" TextAlignment="Center" FontFamily="Agency FB" FontSize="36" IsUndoEnabled="False"/>
+        <Button x:Name="scan" Content="Sprawdź!" HorizontalAlignment="Left" Margin="597,371,0,0" VerticalAlignment="Top" Width="90" Height="30" Click="scan_Click"/>
+        <Label Content="Liczba iteracji" HorizontalAlignment="Left" Margin="546,453,0,0" VerticalAlignment="Top"/>
+        <Label Content="Współczynnik Ro" HorizontalAlignment="Left" Margin="679,455,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="iterations" HorizontalAlignment="Left" Margin="542,482,0,0" TextWrapping="Wrap" Text="10000" VerticalAlignment="Top" Width="103" TextChanged="iterations_TextChanged"/>
+        <TextBox x:Name="Ro" HorizontalAlignment="Left" Margin="682,481,0,0" TextWrapping="Wrap" Text="0.2" VerticalAlignment="Top" Width="103" TextChanged="Ro_TextChanged"/>
+        <Button x:Name="Train" Content="Trenuj" HorizontalAlignment="Left" Margin="609,523,0,0" VerticalAlignment="Top" Height="22" Width="74" Click="Train_Click"/>
+        <Grid x:Name="PixelGrid_Display" Margin="807,88,13,135">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
